<resources>
    <string name="app_name">Smash Utilities</string>
    <string name="titlescreen_smash_util">Smash\n \t \t \tUtilities</string>
    <string name="tap_to_continue_text">Tap to Continue</string>
    <string name="author_name_text">Made by Smeef</string>
    <string name="title_activity_main_start">MainStartActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_character_data_selection">CharacterDataSelectionActivity</string>
    <string name="statistic_title">Statistic</string>
    <string name="value_title">\tValue\t</string>
    <string name="weight">\tWeight\t</string>
    <string name="max_jumps">\tMax Jumps\t</string>
    <string name="run_speed">\tRun Speed\t</string>
    <string name="wall_jump">\tWall Jump\t</string>
    <string name="walk_speed">\tWalk Speed\t</string>
    <string name="wall_cling">\tWall Cling\t</string>
    <string name="air_speed">\tAir Speed\t</string>
    <string name="crawl">\tCrawl\t</string>
    <string name="fall_speed">\tFall Speed\t</string>
    <string name="tether">\tTether\t</string>
    <string name="fast_fall_speed">\tFast Fall Speed\t</string>
    <string name="jumpsquat">\tJumpsquat\t</string>
    <string name="air_acceleration">\tAir Acceleration\t</string>
    <string name="soft_landing_lag">\tSoft Landing Lag\t</string>
    <string name="gravity">\tGravity\t</string>
    <string name="hard_land_lag">\tHard Land Lag\t</string>
    <string name="sh_air_time">\tSH Air Time\t</string>
    <string name="fh_air_time">\tFH Air Time\t</string>
    <string name="ground_moves">\tGround Moves\t</string>
    <string name="hitbox_active">\tHitbox Active\t</string>
    <string name="faf">\tFirst Actionable Frame\t</string>
    <string name="base_dmg">\tBase Dmg.\t</string>
    <string name="bkb_fkb">\tBase Knockback \t</string>
    <string name="kbg">\tKnockback Growth \t</string>
    <string name="angle">\tAngle\t</string>
    <string name="name">\tName\t</string>
    <string name="is_weight_dependent">\tIs Weight Dependent\t</string>
    <string name="aerial_moves">Aerial Moves</string>
    <string name="special_moves">Special Moves</string>
    <string name="seating">Seating:</string>
    <string name="seed">Seed:</string>
    <string name="enter_challonge_username">Enter Challonge Username</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="add_participant">Add Participant</string>
    <string name="remove_participants">Remove Participants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="single_elimination">Single Elimination</string>
    <string name="url_for_tournament">URL</string>
    <string name="challonge_com">challonge.com/</string>
    <string name="double_elimination">Double Elimination</string>
    <string name="round_robin">Round Robin</string>
    <string name="tournament_type">Tournament Type:</string>
    <string name="description">Description</string>
    <string name="is_private">Is Private</string>
    <string name="email_participants_at_start">Email Participants at start</string>
    <string name="email_participants_at_end">Email Participants at end</string>
    <string name="participants">Participants:</string>
    <string name="create_stage_list">Create Stage List</string>
    <string name="enter_stage_list_name">Enter Stage List Name</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="create_note">Create Note</string>
    <string name="format">Format:</string>
    <string name="landing_lag">Landing Lag</string>
    <string name="auto_cancel">Auto Cancel</string>
</resources>
