<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TournamentFeature.TournamentAccessActivity"
    android:orientation="vertical"
    android:background="@color/basebackground">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#000000"
            android:text="@string/create_tournament"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/pixeloperator"
            android:paddingBottom="24dp"
            android:id="@+id/TextView_CreateTournament"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/tournament_name"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:id="@+id/EditText_TournamentName"
            android:layout_below="@id/TextView_CreateTournament" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditText_TournamentName"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:id="@+id/RadioGroup_TournamentType"
            android:paddingBottom="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tournament_type"
                android:fontFamily="@font/pixeloperator"
                android:textColor="#000000"
                android:textSize="22sp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single_elimination"
                android:fontFamily="@font/pixeloperator"
                android:textSize="18sp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/double_elimination"
                android:fontFamily="@font/pixeloperator"
                android:textSize="18sp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_robin"
                android:fontFamily="@font/pixeloperator"
                android:textSize="18sp"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/RadioGroup_TournamentType"
            android:id="@+id/LinearLayout_InputURL">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/pixeloperator"
                android:text="@string/challonge_com"
                android:textColor="#000000"
                android:textSize="22sp" />
            <EditText
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/url_for_tournament"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:id="@+id/EditText_TournamentURL" />
        </LinearLayout>
        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:id="@+id/EditText_Description"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/LinearLayout_InputURL"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_private"
            android:textSize="18sp"
            android:layout_below="@id/EditText_Description"
            android:layout_marginLeft="32dp"
            android:id="@+id/CheckBox_IsPrivate"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_participants_at_start"
            android:textSize="18sp"
            android:layout_below="@id/CheckBox_IsPrivate"
            android:layout_marginLeft="32dp"
            android:id="@+id/CheckBox_EmailAtStart"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_participants_at_end"
            android:textSize="18sp"
            android:layout_below="@id/CheckBox_EmailAtStart"
            android:layout_marginLeft="32dp"
            android:id="@+id/CheckBox_EmailAtEnd"/>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ScrollView_Participants"
            android:layout_below="@id/CheckBox_EmailAtEnd">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/LinearLayout_ParticipantContainer"
                android:layout_gravity="center_horizontal">

            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_participant"
            android:textAllCaps="false"
            android:fontFamily="@font/pixeloperator"
            android:layout_below="@id/ScrollView_Participants"
            android:id="@+id/Button_AddParticipant"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="32dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_participants"
            android:textAllCaps="false"
            android:fontFamily="@font/pixeloperator"
            android:layout_below="@id/ScrollView_Participants"
            android:id="@+id/Button_RemoveParticipant"
            android:layout_toLeftOf="@id/Button_AddParticipant"
            android:visibility="gone"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/create_tournament"
            android:fontFamily="@font/pixeloperator"
            android:id="@+id/Button_CreateTournament"
            android:textAllCaps="false"
            android:layout_below="@id/Button_AddParticipant" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_below="@id/Button_CreateTournament"/>
    </RelativeLayout>
</ScrollView>