<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/basebackground"
    android:id="@+id/RelativeLayout_StartLayout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_name_text"
        android:textSize="24sp"
        android:layout_margin="16sp"
        android:fontFamily="@font/pixeloperator"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlescreen_smash_util"
        android:layout_centerInParent="true"
        android:fontFamily="@font/pixeloperator"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/TextView_Title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_continue_text"
        android:layout_below="@id/TextView_Title"
        android:layout_centerHorizontal="true"
        android:paddingTop="24dp"
        android:fontFamily="@font/pixeloperator"
        android:textSize="20sp"/>

</RelativeLayout>